2005-11-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck2-server
	* info/patches/ck_server_patches/patch-2.6.14-ck2-server: added

2005-11-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck2
	* info/patches/ck_patches/patch-2.6.14-ck2: added

2005-11-02 David Brown <dmlb2000@gmail.com>
	* info/patches/reiser4_patches/reiser4-for-2.6.13-4.patch: added
	* info/patches-sigs/reiser4_patches/reiser4-for-2.6.13-4.patch.gz.sig: added

2005-11-02 Eric Sandall <eric@sandall.us>
	* info/patches/sws2_patches/software-suspend-2.2-rc6-for-2.6.13.patch:
	  Changed source_url to use distro/kernel instead of mirror/
	  SMGL kernel patches go in distro/kernel, /mirror is for mirroring other
	  people's code.
	* info/patches/maintenance_patches/patch-2.6.13.4: Removed
	  ESTABLISHED_UPSTREAM_KEY from URL
	  David, if this is a correct fix than all the other gpg_source_urls (at
	  least in maintenance_patches) need fixing as well, otherwise let me know
	  and I'll revert it.

2005-10-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck1-server
	* info/patches/ck_server_patches/patch-2.6.14-ck1-server: added

2005-10-30 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck1
	* info/patches/ck_patches/patch-2.6.14-ck1: added

2005-10-30 David Brown <dmlb2000@gmail.com>
	* PREPARE: modified to add expert mode where all you specify is the
	  kernel version to use and it will assume /usr/src/linux-$VERSION
	  exists
	* BUILD: cleaned up a bit to make it more readable
	* INSTALL: also cleaned up a bit to make it more readable
	* PRE_BUILD: swapped out else if's for case statements and added
	  extra output for expert mode

2005-10-27 David Brown <dmlb2000@gmail.com>
	* info/patches/maintenance_patches/patch-2.6.14: added
	* info/kernels/2.6.14: added
	* latest.defaults: updated to new 2.6.14 kernel

2005-10-25 David Brown <dmlb2000@gmail.com>