@@ -1,0 +1,4 @@
+appliedkernels="2.6.13"
+source="software-suspend-2.2-rc7-for-${appliedkernels}.patch.bz2"
+source_url="http://download.sourcemage.org/distro/kernel/${source}"
+source_gpg="gurus.gpg:info/patches-sigs/sws2_patches/${source}.sig"
