@@ -1,3 +1,7 @@
+2005-11-03 Eric Sandall <eric@sandall.us>
+	* info/patches/sws2_patches/software-suspend-2.2-{rc7-for-2.6.13,
+	  rc8-for-2.6.14}.patch: Added
+
 2005-11-02 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.14-ck2-server
 	* info/patches/ck_server_patches/patch-2.6.14-ck2-server: added
